--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.4.2",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.4.3",
     "@react-navigation/stack": "^5.5.1",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-firebase-analytics": "~2.1.1",
+    "expo-firebase-core": "~1.0.0",
     "firebase": "7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
